--- a/app/about/about.template.html
+++ b/app/about/about.template.html
@@ -8,7 +8,7 @@
                 </md-card-title-text>
             </md-card-title>
             <md-card-actions layout="row" layout-align="end center">
-                <md-button ng-href="https://github.com/gnd.github.io" target="blank">Github</md-button>
+                <md-button ng-href="https://github.com/glazunovn.github.io" target="blank">Github</md-button>
             </md-card-actions>
         </md-card>
     </div>
