--- a/index.html
+++ b/index.html
@@ -56,7 +56,79 @@
   <script src="app/text/text.component.js"></script>
   <script src="app/image/image.component.js"></script>
   <script src="app/list/list.component.js"></script>
+  
+  <h1>Лабораторная работа №3. Разработка SPA приложения<h1>
+    <canvas id="clock" class="clock"></canvas>
+    window.addEventListener( 'DOMContentLoaded', function () 
+    {
+    var clock = document.querySelector('#clock').getContext('2d');
+    clock.canvas.width = 500;
+    clock.canvas.height = 500;
+    },false);
+    var now = new Date();
+    var hours = now.getHours();
+    var minutes = now.getMinutes();
+    var seconds = now.getSeconds();
+    var miliSeconds = now.getMilliseconds();
+    var today = now.toDateString();
+    var time = now.toLocaleTimeString();
+    
+    function degreeToRadian (degree) {
+    return degree * Math.PI / 180;
+}
 
+function renderTime () {
+
+    // HOURS
+    clock.beginPath();
+    clock.arc( 250, 250, 200, degreeToRadian(270), degreeToRadian( hours * 15 - 90 ) );
+    clock.stroke();
+
+    // MINUTES
+    clock.beginPath();
+    clock.arc( 250, 250, 180, degreeToRadian(270), degreeToRadian( minutes * 6 - 90 ) );
+    clock.stroke();
+
+    // SECONDS
+    clock.beginPath();
+    clock.arc( 250, 250, 160, degreeToRadian(270), degreeToRadian( newSeconds * 6 - 90 ) );
+    clock.stroke();
+
+}
+
+setInterval( renderTime, 40 );
+    var hours = now.getHours();
+    var minutes = now.getMinutes();
+    var seconds = now.getSeconds();
+    clock.strokeStyle = '#28d1fa';
+    clock.lineWidth = 14;
+    clock.lineCap = 'round';
+    clock.fillStyle = '#000';
+    clock.fillRect( 0, 0, 500, 500 );
+    var newSeconds = seconds + ( miliSeconds / 1000 );
+    clock.beginPath();
+    clock.arc( 250, 250, 160, degreeToRadian(270), degreeToRadian( newSeconds * 6 - 90 ) );
+    clock.stroke();
+    // DATE
+    clock.font = '700 24px Arial, sans-serif';
+    clock.fillStyle = '#28d1fa';
+    clock.fillText(today, 175, 250);
+    // TIME
+    clock.font = '14px Arial, sans-serif';
+    clock.fillText(time, 185, 270);
+    // BACKGROUND
+    var gradient = clock.createRadialGradient( 250, 250, 5, 250, 250, 300 );
+    gradient.addColorStop( 0, '#09303a' );
+    gradient.addColorStop( 1, '#000' );
+    clock.fillStyle = gradient;
+    clock.fillRect( 0, 0, 500, 500 );
+    <canvas id="clock" class="clock"></canvas>
+    <img src="" id="image" alt="Clock"/>
+    .clock {
+    display: none;
+    }
+    document.querySelector('#image').src = clock.canvas.toDataURL();
+    
 </body>
 
 </html>
