--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@ setInterval( renderTime, 40 );
     clock.arc( 250, 250, 160, degreeToRadian(270), degreeToRadian( newSeconds * 6 - 90 ) );
     clock.stroke();
     // DATE
-    clock.font = 700 24px Arial, sans-serif;
+    clock.font = '700 24px Arial, sans-serif';
     clock.fillStyle = '#28d1fa';
     clock.fillText(today, 175, 250);
     // TIME
-    clock.font = 14px Arial, sans-serif;
+    clock.font = '14px Arial, sans-serif';
     clock.fillText(time, 185, 270);
     // BACKGROUND
     var gradient = clock.createRadialGradient( 250, 250, 5, 250, 250, 300 );
