--- a/index.html
+++ b/index.html
@@ -101,28 +101,28 @@ setInterval( renderTime, 40 );
     var hours = now.getHours();
     var minutes = now.getMinutes();
     var seconds = now.getSeconds();
-    clock.strokeStyle = '#28d1fa';
-    clock.lineWidth = 14;
-    clock.lineCap = round;
-    clock.fillStyle = gradient;
-    clock.fillRect( 0, 0, 500, 500 );
+    ctx.strokeStyle = '#28d1fa';
+    ctx.lineWidth = 14;
+    ctx.lineCap = round;
+    ctx.fillStyle = gradient;
+    ctx.fillRect( 0, 0, 500, 500 );
     var newSeconds = seconds + ( miliSeconds / 1000 );
-    clock.beginPath();
-    clock.arc( 250, 250, 160, degreeToRadian(270), degreeToRadian( newSeconds * 6 - 90 ) );
-    clock.stroke();
+    ctx.beginPath();
+    ctx.arc( 250, 250, 160, degreeToRadian(270), degreeToRadian( newSeconds * 6 - 90 ) );
+    ctx.stroke();
     // DATE
-    clock.font = '700 24px Arial, sans-serif';
-    clock.fillStyle = '#28d1fa';
-    clock.fillText(today, 175, 250);
+    ctx.font = '700 24px Arial, sans-serif';
+    ctx.fillStyle = '#28d1fa';
+    ctx.fillText(today, 175, 250);
     // TIME
-    clock.font = '14px Arial, sans-serif';
-    clock.fillText(time, 185, 270);
+    ctx.font = '14px Arial, sans-serif';
+    ctx.fillText(time, 185, 270);
     // BACKGROUND
-    var gradient = clock.createRadialGradient( 250, 250, 5, 250, 250, 300 );
+    var gradient = ctx.createRadialGradient( 250, 250, 5, 250, 250, 300 );
     gradient.addColorStop( 0, '#09303a' );
     gradient.addColorStop( 1, '#000' );
-    clock.fillStyle = gradient;
-    clock.fillRect( 0, 0, 500, 500 );
+    ctx.fillStyle = gradient;
+    ctx.fillRect( 0, 0, 500, 500 );
       </script>
 </body>
 
