--- a/index.html
+++ b/index.html
@@ -62,9 +62,10 @@
     <script>
     window.addEventListener( 'DOMContentLoaded', function () 
     {
-    var clock = document.querySelector('#clock').getContext('2d');
-    clock.canvas.width = 500;
-    clock.canvas.height = 500;
+    var canvas = document.querySelector("canvas");
+    var ctx = canvas.getContext("2d");
+    canvas.width = 500;
+    canvas.height = 500;
     },false);
     var now = new Date();
     var hours = now.getHours();
